--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <strong>Info:</strong></p>
 <p><a href="https://challonge.com/es/eiw6klg6/standings"> Premier League</a>: 7 teams,<span>&nbsp; </span><strong>7th is demoted to 2nd Division</strong>, and 5th and 6th play with 2nd and 3rd from second 4a-side division</p>
 <br><p><strong>Challengers:</strong></p>
-<p>1 - Castillo: Santos<img src="https://image.flaticon.com/icons/png/128/625/625394.png" alt="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
-<p>2 - Manu: Villareal&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490582.svg" alt="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" alt="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" alt="Cup season 1" width="5%"></p><br>
-<p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490581.svg" alt="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625396.png" alt="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" alt="Cup season 1" width="5%"></p>
-<p>4 - Alberto: Independiente de Avellaneda&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625396.png"  alt="Cup season 1" width="5%"></p>
-<p>5 - Emilio: Lokomotiv Moscow <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" alt="Cup season 2" width="5%"> </p>
+<p>1 - Castillo: Santos<img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
+<p>2 - Manu: Villareal&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490582.svg" title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1" width="5%"></p><br>
+<p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490581.svg" title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Cup season 1" width="5%"></p>
+<p>4 - Alberto: Independiente de Avellaneda&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625396.png"  title="Cup season 1" width="5%"></p>
+<p>5 - Emilio: Lokomotiv Moscow <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"> </p>
 <p>6 - Juande: Tigres</p>
 <p>7 - Oliver: Colonia</p>
 
