removing a useless br

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br><p><strong>Info:</strong><br></p><p><a href="https://challonge.com/es/f2pl1h2u/standings">Second division</a>: 8 teams, <strong>winner is automatically promoted</strong>. 2nd and 3rd will play to reach the WATA LEAGUE against 6th and 5th from WATA LEAGUE<br></p>
 <br><p><strong>Challengers:</strong></p>
 <p>1 - Andre: FC. St. Pauli</p>
-<p>2 - Juan: Wolfsburg</p><br>
+<p>2 - Juan: Wolfsburg</p>
 <p>3 - Carmelo: Getafe CF</p>
 <p>4 - Victor: Torino Calcio</p>
 <p>5 - Alex: Rosenborg</p>
