background image and some font faces

--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <html>
 <head>WATA/4A-Side FIFA Season</head>
 
-<strong>Info:</strong></p>
-<p><a href="https://challonge.com/es/eiw6klg6/standings"> Premier League</a>: 7 teams,<span>&nbsp; </span><strong>7th is demoted to 2nd Division</strong>, and 5th and 6th play with 2nd and 3rd from second 4a-side division</p>
-<br><p><strong>Challengers:</strong></p>
-<p>1 - Castillo: Santos<img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
-<p>2 - Manu: Villareal&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490582.svg" title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1" width="5%"></p><br>
-<p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490581.svg" title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Cup season 1" width="5%"></p>
-<p>4 - Alberto: Independiente de Avellaneda&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625396.png"  title="Cup season 1" width="5%"></p>
-<p>5 - Emilio: Lokomotiv Moscow <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"> </p>
-<p>6 - Juande: Tigres</p>
-<p>7 - Oliver: Colonia</p>
+<div style="background-image: url('images/background.jpg');">
+    <font size="5" face="verdana">
+        <strong>Info:</strong></p>
+        <p><a href="https://challonge.com/es/eiw6klg6/standings"> Premier League</a>: 7
+            teams,<span>&nbsp; </span><strong>7th
+                is demoted to 2nd Division</strong>, and 5th and 6th play with 2nd and 3rd from second 4a-side division
+        </p>
+        <br>
+        <p><strong>Challengers:</strong></p>
+        <p>1 - Castillo: Santos<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
+                                    title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
+        <p>2 - Manu: Villareal&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490582.svg"
+                                               title="Cup season 2" width="5%"><img
+                src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1"
+                width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1"
+                                width="5%"></p><br>
+        <p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490581.svg"
+                                             title="Cup season 2" width="5%"><img
+                src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1"
+                width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Cup season 1"
+                                width="5%"></p>
+        <p>4 - Alberto: Independiente de Avellaneda&nbsp;<img
+                src="https://image.flaticon.com/icons/png/128/625/625396.png"
+                title="Cup season 1" width="5%"></p>
+        <p>5 - Emilio: Lokomotiv Moscow <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg"
+                                             title="Cup season 2" width="5%"></p>
+        <p>6 - Juande: Tigres</p>
+        <p>7 - Oliver: Colonia</p>
 
-<strong>Premier League fixtures:</strong></p>
-<iframe src="https://challonge.com/es/eiw6klg6/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+        <strong>Premier League fixtures:</strong></p>
+        <iframe src="https://challonge.com/es/eiw6klg6/module" width="100%" height="500" frameborder="0"
+                scrolling="auto"
+                allowtransparency="true"></iframe>
 
-<br><p><strong>Info:</strong><br></p><p><a href="https://challonge.com/es/f2pl1h2u/standings">Second division</a>: 8 teams, <strong>winner is automatically promoted</strong>. 2nd and 3rd will play to reach the WATA LEAGUE against 6th and 5th from WATA LEAGUE<br></p>
-<br><p><strong>Challengers:</strong></p>
-<p>1 - Andre: FC. St. Pauli</p>
-<p>2 - Juan: Wolfsburg</p>
-<p>3 - Carmelo: Getafe CF</p>
-<p>4 - Victor: Torino Calcio</p>
-<p>5 - Alex: Rosenborg</p>
-<p>6 - Fabio: Wolves</p>
-<p>7 - Isa: West Ham United</p>
-<p>8 - Beli: Real Sociedad</p>
+        <br>
+        <p><strong>Info:</strong><br></p>
+        <p><a href="https://challonge.com/es/f2pl1h2u/standings">Second division</a>: 8 teams, <strong>winner is
+            automatically promoted</strong>. 2nd and 3rd will play to reach the WATA LEAGUE against 6th and 5th from
+            WATA
+            LEAGUE<br></p>
+        <br>
+        <p><strong>Challengers:</strong></p>
+        <p>1 - Andre: FC. St. Pauli</p>
+        <p>2 - Juan: Wolfsburg</p>
+        <p>3 - Carmelo: Getafe CF</p>
+        <p>4 - Victor: Torino Calcio</p>
+        <p>5 - Alex: Rosenborg</p>
+        <p>6 - Fabio: Wolves</p>
+        <p>7 - Isa: West Ham United</p>
+        <p>8 - Beli: Real Sociedad</p>
 
-<strong>Second division fixtures:</strong></p>
-<iframe src="https://challonge.com/es/f2pl1h2u/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+        <strong>Second division fixtures:</strong></p>
+        <iframe src="https://challonge.com/es/f2pl1h2u/module" width="100%" height="500" frameborder="0"
+                scrolling="auto"
+                allowtransparency="true"></iframe>
 
-<strong>Kauffeld & Lorenzo Cup:</strong></p>
-<iframe src="https://challonge.com/es/dht6dnk6/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-
+        <strong>Kauffeld & Lorenzo Cup:</strong></p>
+        <iframe src="https://challonge.com/es/dht6dnk6/module" width="100%" height="500" frameborder="0"
+                scrolling="auto"
+                allowtransparency="true"></iframe>
+    </font>
+</div>
 </html>
