--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <p><strong>Challengers:</strong></p>
         <p>1 - Castillo: Santos<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
                                     title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
-        <p>2 - Manu: Villareal&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490582.svg"
+        <p>2 - Manu: Villareal&nbsp;&nbsp;<img
+                src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 2"
+                width="5%"><img src="https://image.flaticon.com/icons/svg/1490/1490582.svg"
                                                title="Cup season 2" width="5%"><img
                 src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1"
                 width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1"
                                 width="5%"></p><br>
-        <p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/svg/1490/1490581.svg"
+        <p>3 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
+                                             title="Premier League season 2" width="5%"><img src="https://image.flaticon.com/icons/svg/1490/1490581.svg"
                                              title="Cup season 2" width="5%"><img
                 src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1"
                 width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Cup season 1"
