upgrading the trophies

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <br>
         <p><strong>Challengers:</strong></p>
         <p>1 - Andre: FC. St. Pauli</p>
-        <p>2 - Juan: Wolfsburg</p>
+        <p>2 - Juan: Wolfsburg &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
         <p>3 - Carmelo: Getafe CF</p>
         <p>4 - Victor: Torino Calcio</p>
         <p>5 - Alex: Rosenborg</p>
