--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </p>
         <br>
         <p><strong>Challengers:</strong></p>
-        <p>1 - Jesus: Monaco&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
+        <p>1 - Jesus: Monaco*&nbsp;&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
                                              title="Premier League season 2" width="5%"><img src="https://image.flaticon.com/icons/svg/1490/1490581.svg"
                                              title="Cup season 2" width="5%"><img
                 src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1"
@@ -20,16 +20,12 @@
         <p>2 - Manu: Villareal&nbsp;&nbsp;<img
                 src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 2"
                 width="5%"><img src="https://image.flaticon.com/icons/svg/1490/1490582.svg"
-                                               title="Cup season 2" width="5%"><img
-                src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1"
-                width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1"
-                                width="5%"></p><br>
+                                               title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1" width="5%"></p><br>
         <p>3 - Castillo: ?<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
                                     title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
         <p>4 - Juande: ?</p>
         <p>5 - Oliver: Colonia</p>
-        <p>6 - Emilio: Lokomotiv Moscow <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg"
-                                             title="Cup season 2" width="5%"></p>
+        <p>6 - Emilio: ? <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"></p>
         <p>7 - Juan: ? &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
         <p>8 - Fabio: Wolves</p>
 
@@ -42,14 +38,12 @@
             WATA LEAGUE<br></p>
         <br>
         <p><strong>Challengers:</strong></p>
-        <p>1 - Alberto: Cadiz FC&nbsp;<img
-                src="https://image.flaticon.com/icons/png/128/625/625396.png"
-                title="Cup season 1" width="5%"></p>
-        <p>2 - Andre: FC. St. Pauli</p>
+        <p>1 - Alberto: Cadiz FC*&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Cup season 1" width="5%"></p>
+        <p>2 - Andre: FC. St. Pauli*</p>
         <p>3 - Carmelo: Getafe CF</p>
         <p>4 - Victor: Torino Calcio</p>
         <p>5 - Alex: ?</p>
-        <p>6 - Isa: West Ham United</p>
+        <p>6 - Isa: West Ham United*</p>
         <p>7 - Beli: Real Sociedad</p>
         <p>8 - Maria: ?</p>
 
