some teams has been confirmed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Premier League season 1"
                 width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Cup season 1"
                                 width="5%"></p>
-        <p>2 - Manu: Villareal&nbsp;&nbsp;<img
+        <p>2 - Manu: Villareal*&nbsp;&nbsp;<img
                 src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 2"
                 width="5%"><img src="https://image.flaticon.com/icons/svg/1490/1490582.svg"
                                                title="Cup season 2" width="5%"><img src="https://image.flaticon.com/icons/png/128/179/179251.png" title="Premier League season 1" width="5%"><img src="https://image.flaticon.com/icons/png/128/625/625394.png" title="Cup season 1" width="5%"></p><br>
