some teams has been confirmed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>1 - Alberto: Cadiz FC*&nbsp;<img src="https://image.flaticon.com/icons/png/128/625/625396.png" title="Cup season 1" width="5%"></p>
         <p>2 - Andre: FC. St. Pauli*</p>
         <p>3 - Carmelo: Getafe CF</p>
-        <p>4 - Victor: Torino Calcio</p>
+        <p>4 - Victor: Torino Calcio*</p>
         <p>5 - Alex: ?</p>
         <p>6 - Isa: West Ham United*</p>
         <p>7 - Beli: Real Sociedad</p>
