--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>3 - Castillo: ?<img src="https://image.flaticon.com/icons/png/128/625/625394.png"
                                     title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
         <p>4 - Juande: ?</p>
-        <p>5 - Oliver: Colonia</p>
+        <p>5 - Oliver: Colonia*</p>
         <p>6 - Emilio: ? <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"></p>
         <p>7 - Juan: ? &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
         <p>8 - Fabio: Wolves</p>
