some teams has been confirmed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>5 - Oliver: Colonia*</p>
         <p>6 - Emilio: ? <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"></p>
         <p>7 - Juan: ? &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
-        <p>8 - Fabio: Wolves</p>
+        <p>8 - Fabio: Wolves*</p>
 
         <strong>Premier League fixtures: Season 3 to be scheduled</strong></p>
 
