some teams has been confirmed

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <p>4 - Victor: Torino Calcio*</p>
         <p>5 - Alex: ?</p>
         <p>6 - Isa: West Ham United*</p>
-        <p>7 - Beli: Real Sociedad</p>
-        <p>8 - Maria: ?</p>
+        <p>7 - Beli: Eintracht Frankfurt</p>
+        <p>8 - Maria: Real Sociedad</p>
 
 
         <strong>Second division fixtures: Season 2 to be scheduled</strong></p>
