some teams has been confirmed

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                                     title="Premier League season 1" width="5%">&nbsp; &nbsp;</p>
         <p>4 - Juande: ?</p>
         <p>5 - Oliver: Colonia*</p>
-        <p>6 - Emilio: ? <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"></p>
-        <p>7 - Juan: ? &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
+        <p>6 - Emilio: Newcastle United <img src="https://image.flaticon.com/icons/svg/1490/1490583.svg" title="Cup season 2" width="5%"></p>
+        <p>7 - Juan: Austria &nbsp;<img src="https://image.flaticon.com/icons/svg/2583/2583307.svg" title="Second Division season 1" width="5%"></p>
         <p>8 - Fabio: Wolves*</p>
 
         <strong>Premier League fixtures: Season 3 to be scheduled</strong></p>
@@ -42,7 +42,7 @@
         <p>2 - Andre: FC. St. Pauli*</p>
         <p>3 - Carmelo: Getafe CF</p>
         <p>4 - Victor: Torino Calcio*</p>
-        <p>5 - Alex: ?</p>
+        <p>5 - Alex: Noruega</p>
         <p>6 - Isa: West Ham United*</p>
         <p>7 - Beli: Eintracht Frankfurt</p>
         <p>8 - Maria: Real Sociedad</p>
