announcement due to the covid

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <title>WATA/4A-Side FIFA Season</title>
 </head>
 <body>
+
 <div style="background-image: url('images/background.jpg');">
     <font size="5" face="verdana">
+        <strong>IMPORTANT ANNOUNCEMENT:</strong></p>
+        <p>Due to the situation we're living now regarding the COVID-19, and because all the WATA/4A-SIDE employees are going to start working from home on next Moday, <strong>all the competitions has been postponed at least for two weeks</strong></p>
+        <br />
+        <p>If there is a change on this kind of measures, then we will let you know.</p>
+        <br />
+        <p>Not it's time to be responsible. Please stay at home</p>
         <strong>Info:</strong></p>
         <p><a href="https://challonge.com/es/eiw6klg6/standings"> Premier League</a>: 8
             teams,<span>&nbsp; </span><strong>7th and 8th are demoted to 2nd Division</strong>, 5th and 6th play with 3rd and 4th from second 4a-side division
