announcement due to the covid

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div style="background-image: url('images/background.jpg');">
     <font size="5" face="verdana">
         <strong>IMPORTANT ANNOUNCEMENT:</strong></p>
-        <p>Due to the situation we're living now regarding the COVID-19, and because all the WATA/4A-SIDE employees are going to start working from home on next Moday, <strong>all the competitions has been postponed at least for two weeks</strong></p>
+        <p>Due to the situation we're living now regarding the COVID-19, and because all the WATA/4A-SIDE employees are going to start working from home on next Monday, <strong>all the competitions has been postponed at least for two weeks</strong></p>
         <br />
         <p>If there is a change on this kind of measures, then we will let you know.</p>
         <br />
