announcement due to the covid

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br />
         <p>If there is a change on this kind of measures, then we will let you know.</p>
         <br />
-        <p>Not it's time to be responsible. Please stay at home</p>
+        <p>Now it's time to be responsible. Please stay at home</p>
         <strong>Info:</strong></p>
         <p><a href="https://challonge.com/es/eiw6klg6/standings"> Premier League</a>: 8
             teams,<span>&nbsp; </span><strong>7th and 8th are demoted to 2nd Division</strong>, 5th and 6th play with 3rd and 4th from second 4a-side division
